# AI-writter

./: .env.example  .gitignore  README.md  docker-compose.prod.yml  docker-compose.yml  package-lock.json
writter_back/: .dockerignore  .env.example  .env.test  Dockerfile  README.md  __init__.py  _check_chapters.py  _check_checkpoints.py  _check_db.py  _check_dup.py  _check_more.py  alembic.ini  config.py  docker-entrypoint.sh  pyproject.toml  集成测试完成情况.md
writter_back/alembic/: env.py
writter_back/alembic/versions/: 0001_initial.py  0002_tenant_isolation.py
writter_back/api/: dependencies.py  main.py
writter_back/api/routers/: admin_router.py  auth_router.py  novel_router.py  tenant_router.py  workflow_router.py
writter_back/application/: auth_service.py  continuity.py  errors.py  events.py  orchestrator.py  quota_service.py  streaming.py  workflow_builder.py
writter_back/application/agents/: __init__.py  chapter_outline_node.py  chapter_writer_node.py  memory_retrieval_node.py  outline_generator_node.py  persist_node.py  progress_check_node.py  reflection_node.py  revision_node.py  router_agent.py  summary_generator_node.py  title_generator_node.py  type_confirmation_node.py
writter_back/application/prompts/: chapter_outline_prompts.py  chapter_writer_prompts.py  memory_prompts.py  outline_prompts.py  reflection_prompts.py  revision_prompts.py  summary_prompts.py  title_prompts.py
writter_back/application/schemas/: __init__.py  agent_state.py
writter_back/infrastructure/database/: identity_repository.py  models.py  repository.py
writter_back/infrastructure/llm/: __init__.py  anthropic_adapter.py  base.py  deepseek_adapter.py  openai_adapter.py
writter_back/infrastructure/memory/: __init__.py  postgres_memory.py
writter_back/scripts/: backfill_novel_metadata.py  bootstrap_admin.py  fix_outline.sql
writter_back/service/: __init__.py
writter_back/service/entities/: __init__.py  chapter.py  identity.py  novel.py
writter_back/service/ports/: __init__.py  agent_service.py  llm_service.py  memory_service.py  novel_repository.py
writter_back/service/value_objects/: __init__.py  chapter_outline.py  novel_type.py  outline.py  progress.py
writter_back/tests/: conftest.py  test_auth_service.py  test_continuity.py  test_novel_crud.py  test_reflection_contract.py  test_streaming_contracts.py  test_workflow_flow.py
writter_front/: Dockerfile  Dockerfile.runtime  README.md  index.html  nginx.conf  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
writter_front/src/: App.tsx  index.css  main.tsx
writter_front/src/api/: auth.ts  client.ts  novel.ts  workflow.test.ts  workflow.ts
writter_front/src/components/: AppShell.tsx  AuthLayout.tsx  MarkdownManuscript.test.tsx  MarkdownManuscript.tsx  ProtectedRoute.tsx  WorkflowPanel.test.tsx  WorkflowPanel.tsx
writter_front/src/hooks/: useWorkflowStream.test.ts  useWorkflowStream.ts
writter_front/src/pages/: AcceptInvite.tsx  BookShelf.tsx  CreateNovel.tsx  Login.tsx  NovelConfig.tsx  NovelProgress.tsx  NovelStudio.tsx  PlatformAdmin.tsx  Register.tsx  TenantSettings.tsx
writter_front/src/stores/: authStore.ts  novelStore.ts
writter_front/src/test/: setup.ts
writter_front/src/types/: auth.ts  novel.ts
