[project]
name = "novel-writer-backend"
version = "0.1.0"
description = "AI Novel Writing System Backend"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.32.0",
    "langgraph>=0.2.0",
    "langchain-core>=0.3.0",
    "langchain-openai>=0.2.0",
    "langchain-anthropic>=0.2.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.29.0",
    "psycopg2-binary>=2.9.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
    "PyJWT>=2.9.0",
    "argon2-cffi>=23.1.0",
    "alembic>=1.13.0",
    "langgraph-checkpoint-postgres>=0.1.0",
    "openai>=1.55.0",
    "anthropic>=0.39.0",
    "httpx>=0.27.0",
    "psycopg[binary]>=3.3.4",
    "msgpack>=1.1.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["service", "infrastructure", "application", "api"]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.8.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py311"
exclude = ["_check_*.py", "scripts"]

[tool.ruff.lint]
ignore = ["E402"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
check_untyped_defs = true
warn_unused_ignores = true
explicit_package_bases = true
mypy_path = "."
follow_imports = "skip"
disallow_untyped_defs = true
files = [
    "config.py",
    "api/main.py",
    "api/routers/workflow_router.py",
    "application/events.py",
    "application/auth_service.py",
    "application/quota_service.py",
    "application/streaming.py",
    "application/agents",
    "api/dependencies.py",
    "api/routers/auth_router.py",
    "api/routers/tenant_router.py",
    "api/routers/admin_router.py",
]
exclude = ["scripts/", "_check_.*\\.py"]

